--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
 $color-maroon: #7D2E3D;
 $color-gray: #555758;
 $color-gold: #FFBB00;
+
+#hamburger {
+    background-color: transparent;
+    box-shadow: none;
+    font-size: 30px;
+    margin-left: -20px;
+}
