--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,19 +4,22 @@
       <ion-title>Menu</ion-title>
     </ion-toolbar>
   </ion-header> -->
-  <ion-content>
-    <ion-list>
-      <button ion-item (click)="openPage(homePage)">
+  <ion-content id="hamburgermenu">
+    <ion-list no-lines>
+    <button ion-item (click)="closeMenu()" class="hamburger-button red">
+        <ion-icon name="md-close"></ion-icon>
+    </button>
+      <button ion-item (click)="openPage(homePage)" class="hamburger-button">
          <ion-icon name="ios-home"></ion-icon>
       </button>
-      <button ion-item (click)="openPage(aboutPage)">
+      <button ion-item (click)="openPage(aboutPage)" class="hamburger-button">
         <ion-icon name="ios-information-circle"></ion-icon>
       </button>
-      <button ion-item (click)="openPage(eventsPage)">
-        Events
+      <button ion-item (click)="openPage(statsPage)" class="hamburger-button">
+        <ion-icon name="ios-stats"></ion-icon>
       </button>
-      <button ion-item (click)="closeMenu()">
-        Close Menu
+      <button ion-item (click)="openPage(settingsPage)" class="hamburger-button">
+        <ion-icon name="md-settings"></ion-icon>
       </button>
     </ion-list>
   </ion-content>
