--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,30 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
-ion-scroll.scroll-y .scroll-content::-webkit-scrollbar{
+$color-maroon: #7D2E3D;
+$color-gray: #555758;
+$color-gold: #FFBB00;
+
+ion-scroll.scroll-y .scroll-content::-webkit-scrollbar {
   display: none;
+}
+
+.hamburger-button {
+    color: white;
+    background-color: $color-gray;
+    font-size: 35px;
+    text-align: center;
+    border: 0px solid transparent;
+}
+
+.hamburger-button:active {
+    background-color: $color-gold;
+}
+
+.red {
+    background-color: red;
+}
+
+#hamburgermenu {
+    background-color: $color-gray;
 }
