--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,6 +18,9 @@
       <button ion-item (click)="openPage(statsPage)" class="hamburger-button">
         <ion-icon name="ios-stats"></ion-icon>
       </button>
+      <button ion-item (click)="openPage(teamPage)" class="hamburger-button">
+        <ion-icon name="ios-people"></ion-icon>
+      </button>
       <button ion-item (click)="openPage(settingsPage)" class="hamburger-button">
         <ion-icon name="md-settings"></ion-icon>
       </button>
