--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -88,3 +88,8 @@ $colors: (
 @import "noto-sans";
 
 $menu-width: 80px;
+
+$font-family-base: "Playfair Display Bold";
+$font-family-ios-base: $font-family-base;
+$font-family-md-base: $font-family-base;
+$font-family-wp-base: $font-family-base;
