--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -20,3 +20,6 @@ h1 {
     font-family: 'Playfair Display Bold' !important;
     font-size: 50px;
 }
+ion-content {
+    background-image: url('/img/frc5002.png')
+}
