--- a/src/pages/teamPage/teamPage.scss
+++ b/src/pages/teamPage/teamPage.scss
@@ -2,6 +2,12 @@ page-submit {
     
 }
 
+.teamimg  {
+    width:100% !important;
+    height : 100% !important;
+    max-width: 100px !important;  //any size
+    max-height: 100px !important; //any size
+ }
 // http://ionicframework.com/docs/theming/
 
 
