--- a/src/app/app.html
+++ b/src/app/app.html
@@ -21,7 +21,7 @@
       <button tappable ion-item (click)="openPage(teamPage)" class="hamburger-button">
         <ion-icon name="ios-people"></ion-icon>
       </button>
-      <button tappable ion-item (click)="openPage(ChartsPage)" class="hamburger-button">
+      <button tappable ion-item (click)="openPage(chartPage)" class="hamburger-button">
         <ion-icon name="map"></ion-icon>
       </button>
       <button tappable disabled ion-item (click)="openPage(settingsPage)" class="hamburger-button">
