--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,18 +1,23 @@
+
  #hamburger {
      background-color: transparent;
      box-shadow: none;
      font-size: 30px;
      margin-left: -20px;
      color: rgb(234, 0, 255);
+
  }
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+
+
 }
 li {
     display: inline;
     padding: 8px;
+
 }
 .head {
 position: fixed;
@@ -20,11 +25,13 @@ margin: auto;
 border: solid;
 display: inline;
 vertical-align: middle;
+background-color: white;
 
 }
 .headelements {
     float: left;
     line-height: 200px;
+    background: white
 }
 .headtext {
     font-family: 'Playfair Display Bold' !important;
@@ -46,3 +53,78 @@ vertical-align: middle;
 //     font-size: 50px;
 // }
 
+body, html {
+    height: 100%;
+}
+
+#myelement {
+  position: relative;
+  overflow: hidden;
+}
+
+.paralax1{
+  /* The image used */
+  background-image: url('https://files.slack.com/files-pri/T62EKR0G5-F8X3SUF8X/frc_button_maroon_5002_no_bk_3.png' );
+  background-size: contain;
+
+//  transform: scale(.25);
+
+
+  /* Full height */
+  height: 100%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: paralax;
+}
+
+.paralax2{
+  /* The image used */
+
+  background-image: url('https://www.firstinspires.org/sites/default/files/uploads/resource_library/brand/FIRST_Horz_RGB.jpg');
+  background-repeat: repeat-x;
+  background-position: 0px 10px;
+
+
+
+  /* Full height */
+  height: 100%;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  object-fit: paralax;
+
+}
+
+#body{
+ font-size: 36px;
+ color: black;
+ //background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyHAMl8ap1H1SHdZkD-XXWRQbBSwwT_g4L5n8B1mQB86wF7_jD');
+border: 15px solid black;
+background-color: #dbd5d2;
+}
+#myBtn {
+    display: none; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+    background-color: red; /* Set a background color */
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
+}
