Adding Functionality to Browserr(not stable)

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,7 +18,7 @@
       <button tappable ion-item (click)="openPage(statsPage)" class="hamburger-button">
         <ion-icon name="ios-stats"></ion-icon>
       </button>
-      <button tappable ion-item (click)="openPage(teamPage)" class="hamburger-button">
+      <button tappable ion-item id ="teamPageButton" (click)="openPage(teamPage)" class="hamburger-button">
         <ion-icon name="ios-people"></ion-icon>
       </button>
       <button tappable ion-item (click)="openPage(chartPage)" class="hamburger-button">
